tests/files/parser_tests/should_fail/061.cmdr
//Should not parse for loop due to missing parentheses brace
for i = 0; i == 0; i++) {
    echo hi;
}